Trying to fix ball image showing lower on mobile even if it does not show on mobile view on Chrome

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,6 +45,11 @@ h1 {
 .title-g {
   margin-right: 6px;
 }
+.title-o {
+  @media (max-width: 600px) {
+    padding: 0;
+  }
+}
 #title-y {
   font-family: $title-font;
   font-size: 52px;
